--- a/index.html
+++ b/index.html
@@ -1831,7 +1831,10 @@
 
                 <!-- Data Flow View -->
                 <div class="pipeline-view active" id="flow-view">
-                    <div class="pipeline-stages-container">
+                    <div class="pipeline-scroll-hint" id="scrollHint" style="text-align: right; color: var(--primary-blue); font-size: 0.9rem; margin-bottom: 1rem; font-weight: 600;">
+                        <i class="fas fa-arrow-right"></i> Scroll horizontally to see all 11 stages <i class="fas fa-arrow-left"></i>
+                    </div>
+                    <div class="pipeline-stages-container" id="pipelineContainer">
                         <!-- Stage 1: Data Sources -->
                         <div class="pipeline-stage" data-stage="sources">
                             <div class="stage-header">
